syntax = "proto3";

package db_proto;

message RouteSettings {
	double bus_wait_time = 1;
	double bus_velocity = 2;
}
